# ha-portainer-integration

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  stacks.yaml
.github/workflows/: update-stacks.yml
docs/superpowers/specs/: 2026-04-20-portainer-auto-discovery-design.md
src/: boost_ws_connection.cpp  boost_ws_connection.h  errors.h  ha_client.cpp  ha_client.h  i_ws_connection.h  main.cpp
src/config/: config_parser.cpp  config_parser.h
src/dashboard/: dashboard_updater.cpp  dashboard_updater.h  stack.h
src/discovery/: apply.cpp  apply.h  diff_report.h  prompter.cpp  prompter.h  reconciler.cpp  reconciler.h
src/ha/: ha_client.cpp  ha_client.h
src/portainer/: boost_http_client.cpp  boost_http_client.h  i_http_client.h  portainer_client.cpp  portainer_client.h  portainer_models.h  slug.cpp  slug.h
src/ws/: boost_ws_connection.cpp  boost_ws_connection.h
tests/: apply_test.cpp  config_parser_test.cpp  dashboard_updater_test.cpp  ha_client_test.cpp  portainer_client_test.cpp  prompter_test.cpp  reconciler_test.cpp  slug_test.cpp
